--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 build/*
 packs/QuasarTools/*
-packs/QuasarTools/fast-chroot/fchroot
-packs/QuasarTools/Systemd-rc/systemctl
+
 *.kate-swp
 *.swap
 *.iso
-
 *.img
 releases/
+*.log
+*.o
+*.a
+*.so
+*.tmp
+framwork/
+regions-*
+region-*
+region_settings
