Слияние iso-sdk и QuasarInstall. v3.0

--- a/profiles/QuasarLinux/gaming/main.conf
+++ b/profiles/QuasarLinux/gaming/main.conf
@@ -1,25 +1,60 @@
-#!/bin/sh
 
 #   QuasarLinux
 #   gaming prefix
 #   by QuasarFoks
 
-cat << EOF
+
+desktop="plasma"
+audio="pipewire"
+browser="firefox"
+wine="portproton"
+
+run_scripts() {
+    cat << EOF
 ========================
 ==  Use Gaming prefix ==
 ========================
 EOF
 
 
-gpu_info=$(lspci -nn | grep -i 'VGA\|3D\|Display' | head -1)
+    gpu_info=$(lspci -nn | grep -i 'VGA\|3D\|Display' | head -1)
 
-# Установка базовых драйверов везде (fallback + mesa)
+    # Установка базовых драйверов везде (fallback + mesa)
 
-echo "Installing basic graphics subsystem (mesa, vesa, fbdev)..."
+    echo "Installing basic graphics subsystem (mesa, vesa, fbdev)..."
 
-chroot /mnt pacman -Sy --noconfirm mesa  vulkan-icd-loader lib32-vulkan-icd-loader xf86-video-vesa xf86-video-fbdev
-chroot /mnt pacman -Sy --needed --noconfirm lib32-mesa
+    chroot /mnt pacman -Sy --noconfirm mesa  vulkan-icd-loader lib32-vulkan-icd-loader xf86-video-vesa xf86-video-fbdev
+    chroot /mnt pacman -Sy --needed --noconfirm lib32-mesa
+    video_drivers
+    echo "Installation completed."
 
+
+    chroot /mnt pacman -S vulkan-icd-loader  cpupower cpupower-openrc  --noconfirm --needed
+    chroot /mnt pacman -S lib32-vulkan-icd-loader lib32-glu lib32-libgl lib32-libva --noconfirm
+    chroot /mnt rc-update add cpupower boot
+
+    cat >> /mnt/etc/sysctl.d/99-gaming.conf << 'EOF'
+vm.max_map_count = 16777216
+fs.file-max = 524288
+kernel.pid_max = 4194303
+fs.inotify.max_user_watches = 524288
+
+# Уменьшение латентности сети
+net.core.rmem_max = 134217728
+net.core.wmem_max = 134217728
+net.ipv4.tcp_rmem = 4096 87380 134217728
+net.ipv4.tcp_wmem = 4096 65536 134217728
+net.ipv4.tcp_congestion_control = bbr
+
+EOF
+
+    cat >> /mnt/etc/conf.d/cpupower << 'EOF'
+governor="ondemand"
+min_freq="0"
+max_freq="0"
+EOF
+
+}
 # Определяем и устанавливаем специфичные драйверы
 video_drivers() {
    if echo "$gpu_info" | grep -qi "AMD"; then
@@ -63,39 +98,5 @@ video_drivers() {
     fi
 
 }
-video_drivers
-echo "Installation completed."
 
 
-chroot /mnt pacman -S vulkan-icd-loader  cpupower cpupower-openrc  --noconfirm --needed
-chroot /mnt pacman -S lib32-vulkan-icd-loader lib32-glu lib32-libgl lib32-libva --noconfirm
-chroot /mnt rc-update add cpupower boot
-
-cat >> /mnt/etc/sysctl.d/99-gaming.conf << 'EOF'
-vm.max_map_count = 16777216
-fs.file-max = 524288
-kernel.pid_max = 4194303
-fs.inotify.max_user_watches = 524288
-
-# Уменьшение латентности сети
-net.core.rmem_max = 134217728
-net.core.wmem_max = 134217728
-net.ipv4.tcp_rmem = 4096 87380 134217728
-net.ipv4.tcp_wmem = 4096 65536 134217728
-net.ipv4.tcp_congestion_control = bbr
-
-EOF
-
-cat >> /mnt/etc/conf.d/cpupower << 'EOF'
-governor="ondemand"
-min_freq="0"
-max_freq="0"
-EOF
-install_packs() {
-    local USERLAND="/installer/modules/userland"
-    "$USERLAND"/de_install plasma
-    "$USERLAND"/audio_install pipewire
-    "$USERLAND"/browser_install firefox
-    "$USERLAND"/wine_install portproton
-}
-install_packs
